# gui-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  script.lua
include/: Common.hpp  Label.hpp  Layout.hpp  Shader.hpp  TextShader.hpp  Widget.hpp
src/: Label.cpp  Layout.cpp  Shader.cpp  TextShader.cpp  Widget.cpp  main.cpp
